modules/cli/src/test/resources/good/todo/Do01c.scr
module good.misc.globals.gdo.Do01c;


global protocol Do1c(role A, role B)
{
	do Do1aux(A, B);
	do good.misc.globals.gdo.Do01c.Do1aux(A, B);  // Uncomment is OK
	do X: Do1aux(A, B);  // Uncomment is OK  // TODO
	//do Do1aux(A, B);  // Uncomment is bad
	//do Do1aux(A, A);  // Uncomment is bad
}

global protocol Do1aux(role C, role D)
{
	l1() from C to D;
}

